[workspace]
resolver = "2"
members = ["programs/*", "client"]

[workspace.dependencies]
anchor-lang = { git = "https://github.com/solana-foundation/anchor.git", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/solana-foundation/anchor.git" }
anchor-client = { git = "https://github.com/solana-foundation/anchor.git" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
